# pyqt-lsf-job-manager

./: README.md  pyproject.toml
docs/: GUI_DEVELOPMENT_GUIDE.md  LSF_JOB_MANAGER_REQUIREMENTS_v6.md  LSF_JOB_MANAGER_REQUIREMENTS_v7.md  LSF_JOB_MANAGER_REQUIREMENTS_v9.md  flows.md  logging.md  lsfmgr.md  mocklsf.md  signal_usage.md  wrapper_guide.md
examples/: 01_minimal_console.py  02_submit_progress.py  03_monitor_table.py  04_array_modes.py  05_kill_strategies.py  06_retry_and_lost.py  07_session_restore.py  08_dashboard.py  README.md  basic_example.py  common.py  dashboard.py  gui_demo.py  handler_example.py  mc_example.py  mock_lsf.py
lsfmgr/: __init__.py  command.py  config.py  errors.py  handle.py  handlers.py  jobset_core.py  killer.py  lifecycle.py  manager.py  monitor.py  options.py  pacer.py  qt.py  reports.py  resubmit.py  states.py  submitter.py  util.py
mocklsf/: __init__.py  cli.py  config.py  daemon.py  db.py  formats.py  models.py  scheduler.py  submit.py
tests/: conftest.py  fake_lsf.py  test_basket.py  test_bhist_defer.py  test_bjobs_no_all_flag.py  test_clusters.py  test_command.py  test_errors.py  test_fail_message.py  test_handle.py  test_handlers.py  test_jobset.py  test_jobset_v9.py  test_kill_envpath.py  test_kill_priority.py  test_kill_snapshot.py  test_killer.py  test_lifecycle.py  test_logging_tags.py  test_manager.py  test_mocklsf.py  test_monitor.py  test_options.py  test_post_process.py  test_pre_submit.py  test_readme.py  test_resubmit_gate.py  test_review_cycle1.py  test_review_cycle10.py  test_review_cycle11.py  (+24 more)
(+4 files in other folders)
